[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "GDP_data" #essentially a 'modules' package
version = "0.1.0"
description = "A simple Python project"

[tool.setuptools]
packages = ["GDP_data"]

#[python]
#version = "3.12"

#[dependencies]
#pandas = ">=2.0"
#numpy = ">=1.26"

#BEST STRUCTURE:
#project_root/
#├─ pyproject.toml
#├─ README.md
#└─ fed/
#   ├─ __init__.py
#   ├─ modules/
#   │  └─ module1...
#   ├─ Data/
#   │  └─ my_data.csv
#Would allow:
#[tool.setuptools.package-data]
#"fed" = ["Data/*"]
